# WebVR

./: README.md  db.sqlite3  manage.py  pyproject.toml
SeeWhy/: settings.py  urls.py  wsgi.py
WebVR/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
WebVR/migrations/: 0001_initial.py  0002_a_icosahedron_a_plane.py  0002_auto_20190225_2255.py  0002_auto_20190302_1630.py  0002_auto_20190308_1446.py  0002_auto_20190509_0111.py  0003_auto_20190225_2257.py  0003_auto_20190302_1925.py  0003_auto_20190429_1209.py  0004_a_box_depth.py  0004_auto_20190302_2008.py  0004_auto_20190430_1925.py  0005_auto_20190225_2343.py  0005_auto_20190304_1022.py  0005_auto_20190430_2244.py  0006_auto_20190225_2354.py  0006_auto_20190304_1427.py  0007_a_sky.py  0007_auto_20190228_0212.py  0008_a_box_a_circle_animation_basic_position_rotation_scale_shadow.py  0008_auto_20190304_1648.py  0009_auto_20190228_0214.py  0010_auto_20190228_0322.py  0011_auto_20190228_0414.py  0012_a_sphere.py
WebVR/static/mail/: contact_me.php
WebVR/templates/WebVR/: Home.html  Home_base.html  Project_confirm_delete.html  a_base.html  base.html  createVR.html  myproject.html  projects.html  projects_base.html  showproject.html  test1.html  updateVR.html  user_projects.html
basic/: views.py
doctors/: admin.py  filters.py  forms.py  models.py  urls.py  views.py
doctors/migrations/: 0001_initial.py  0002_alter_appointment_date_of_appointment.py
users/: apps.py  forms.py  models.py  views.py
users/migrations/: 0001_initial.py  0002_auto_20190308_1606.py  0003_auto_20190308_1606.py
(+23 files in other folders)
